	- MC_POST_BACKWARDS_ROOM_RESTORE(LevelStage, RoomDescriptor, string)
		Fires when generating the Ascent layout and one of the previously saved room is restored.
		The string key (e.g. "boss_0", "treasure_0") identifies which slot the room was saved into.
	- MC_PRE_ADD_TRINKET(player, TrinketType, firstTime)
		Return false to cancel, or a different TrinketType to change the trinket being added.
* New Enums:
	- DoorMask
	- WaterClipFlag
	- PlayerHUDLayout
	- RoomEventOutput
	- CustomCacheTag
	- EvaluateStatStage
* Room:
	- GetWallColor()
* Isaac:
	- GetAllowedDoorsMaskForRoomShape: Returns a DoorMask representing all DoorSlots that are allowed for the given RoomShape.
	- UnClearChallenge(challenge id): sets the target challenge id as not cleared. Not recommended with vanilla ones, it should still work tho!
	- SpawnBoss(Type,Variant,SubType,Position,Velocity,Spawner,Seed = ?) Spawns an NPC forcing it to be a Boss, giving it a boss bar and boss-lile qualities.
* Options:
	- AimLockEnabled
	- AscentVoiceOver
	- BossHPOnBottom
	- Brightness
	- Contrast
	- Exposure
	- OnlineChatEnabled (read-only)
	- OnlineChatFilterEnabled (read-only)
	- OnlineColorSet (read-only)
	- OnlineHUD (read-only)
	- OnlineInputDelay (read-only)
	- OnlinePlayerOpacity (read-only)
	- OnlinePlayerVolume (read-only)
	- PreventModUpdates (now read-only)
	- StreamerMode (read-only)
	- TouchMode
	- WindowHeight
	- WindowPosX
	- WindowPosY
	- WindowWidth
* Added the following customtag for items.xml:
	* "noexpansionpack" - Prevents the active item (with 1 or 2 max charges) from being picked by Expansion Pack trinket.
* Added the following customcache for items.xml:
	* "healthtype" - Re-evaluate the player's HealthType
	* "tearscap" - Re-evaluate the player's maximum tears-per-second before flat modifiers and multipliers. Triggers a CACHE_FIREDELAY eval when changed.