@@ -4,15 +4,24 @@ __thiscall void ItemOverlay::Show(int eOverlayID, int delay, Entity_Player *play
 "558bec83ec085356578bf98b07":
 __thiscall void ItemOverlay::Update(bool unk);
 
+"558bec83e4f883ec48568bf1":
+__thiscall void ItemOverlay::Render();
+
 struct ItemOverlay depends (ANM2) {
 {{
 	inline int* GetOverlayID() { return &_overlayID; } 
 	inline ANM2* GetSprite() { return &_sprite; } 
 	inline int* GetDelay() { return &_delay; } 
 	inline Entity_Player* GetPlayer() { &_player; }
+	
+	enum eItemOverlayState {
+		INACTIVE = 0,
+		WAITING = 1,
+		ACTIVE = 2,
+	};
 }}
 	
-	int _state :0x0;
+	int _state : 0x0;
 	int _overlayID : 0x4;
 	ANM2 _sprite : 0x8;
 	int _delay : 0x1144;
