@@ -124,6 +124,8 @@ ModCallbacks.MC_PRE_RENDER = 1135
 ModCallbacks.MC_PRE_OPENGL_RENDER = 1136
 ModCallbacks.MC_PRE_LEVEL_PLACE_ROOM = 1137
 
+ModCallbacks.MC_POST_ITEM_OVERLAY_RENDER = 1139
+
 ModCallbacks.MC_PRE_BACKDROP_CHANGE = 1141
 ModCallbacks.MC_POST_BACKDROP_CHANGE = 1142
 
